--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "framer-motion": "^12.23.16",
     "react": "^19.1.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
@@ -26,6 +25,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "tailwindcss": "^4.1.14",
     "vite": "^7.1.6"
   }
 }
